--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # Replace the API key with your own and remove the .example extension
 
-GOOGLE_MAP_API_KEY="API key"
-GOOGLE_PLACES_API_KEY="API key"
-FIREBASE_AUTH_DOMAIN="API key"
+EXPO_PUBLIC_GOOGLE_PLACES_API_KEY="placeholder"
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN="placeholder"
