--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
@@ -43,14 +44,10 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-<<<<<<< HEAD
     "sync-storage": "^0.4.2",
     "twrnc": "^4.6.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
-=======
-    "twrnc": "^4.6.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "expo-location": "~18.0.5"
->>>>>>> a6a2f03d9721ba776f2aaa0a9816526d6f3e13d6
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
