--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sync-storage": "^0.4.2",
+    "expo-location": "~18.0.5",
     "twrnc": "^4.6.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-location": "~18.0.5"
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
